Show active filter items for all filter groups

--- a/src/components/Filter/ActiveFilterItem.scss
+++ b/src/components/Filter/ActiveFilterItem.scss
@@ -1,8 +1,7 @@
 @import '../../styles/variables';
 
 .item {
-  margin-top: 10px;
-  margin-right: 10px;
+  margin: 10px 10px 10px 0;
   text-overflow: ellipsis;
   overflow-x: hidden;
 }
