--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -12,26 +12,32 @@
   opacity: 0.85;
   transition: 0.15s;
 }
-/* Css for "Rapporter et problem" */
-.newIssue{
+
+/* Css for 'Rapporter et problem' */
+.newIssue {
   composes: link;
   background-color: #e6e6ff;
-  color:black;
+  color: black;
 }
-.newIssue:hover, .newIssue:visited{
+
+.newIssue:hover,
+.newIssue:visited {
   opacity: 1;
-  color:black;
+  color: black;
   box-shadow: inset 0 0 10px #b4c2e4;
 }
-/* Css for "Vis koden og fiks selv" */
+
+/* Css for 'Vis koden og fiks selv' */
 .showCode {
   composes: link;
-  background-color: #EC971F;
-  color:white;
+  background-color: #ec971f;
+  color: white;
 }
-.showCode:hover, .showCode:visited{
+
+.showCode:hover,
+.showCode:visited {
   opacity: 1;
-  color:white;
+  color: white;
   box-shadow: inset 0 0 10px #d38312;
 }
 
@@ -40,6 +46,7 @@
   font-weight: 300;
   font-size: 14px;
 }
+
 /* Container for hele improve box */
 .improvePageBox {
   composes: fontImprovePageBox;
@@ -47,7 +54,7 @@
   flex-direction: column;
   text-align: center;
 
-  padding: 0 5px 5px 5px;
+  padding: 1px 5px 5px 5px;
   margin: 10px auto;
   max-width: 650px;
   border-radius: 10px;
@@ -55,6 +62,7 @@
     margin: 0 20px;
   }
 }
+
 .improvePageBoxRow {
   display: flex;
   justify-content: center;
