--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -5,10 +5,8 @@
   text-align: center;
   font-size: 16px;
   font-weight: 350;
-
   border-radius: 5px;
   padding: 7px;
-
   opacity: 0.85;
   transition: 0.15s;
 }
@@ -53,12 +51,11 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-
-  padding: 1px 5px 5px 5px;
+  padding: 1px 5px 5px;
   margin: 10px auto;
   max-width: 650px;
   border-radius: 10px;
-  div{
+  div {
     margin: 0 20px;
   }
 }
