--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -1,7 +1,9 @@
 @import '../../styles/variables';
 
 .link {
-  &, &:focus, &:hover {
+  &,
+  &:focus,
+  &:hover {
     text-decoration: none;
   }
   text-align: center;
@@ -48,7 +50,7 @@
 }
 
 /* Container for hele improve box */
-.container{
+.container {
   margin: 10px 30px;
 }
 
@@ -64,7 +66,7 @@
 }
 
 /* Row containing the text */
-.improvePageBoxTextRow{
+.improvePageBoxTextRow {
   margin: 5px 20px;
 }
 
@@ -95,6 +97,7 @@
     font-size: 0.9em;
   }
 }
+
 @media only screen and (max-width: 375px) {
   .link {
     font-size: 0.7em;
