--- a/src/components/Filter/ActiveFilterItem.scss
+++ b/src/components/Filter/ActiveFilterItem.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .item {
-  margin: 10px 10px 10px 0;
+  margin: 0 10px 10px 0;
   text-overflow: ellipsis;
   overflow-x: hidden;
 }
