--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -19,7 +19,7 @@
 .infoBox {
   composes: fontInfoBox;
   padding: 5px;
-  margin: 16px;
+  margin: 0 16px;
   max-width: 700px;
   background-color: #f7f7f7 !important;
   border: 1px solid #b2b2b2;
