--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -11,10 +11,15 @@
   font-weight: 300;
 }
 
+.infoBoxContainer {
+  display: flex;
+  justify-content: center;
+}
+
 .infoBox {
   composes: fontInfoBox;
   padding: 5px;
-  margin: 0 auto;
+  margin: 0 16px;
   max-width: 700px;
   background-color: #f7f7f7 !important;
   border: 1px solid #b2b2b2;
