--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -77,6 +77,12 @@
   @include button-nav(#fff, $color-blue, $color-blue-median, 25%);
 }
 
+.btn-guide {
+  @include button-variant(#fff, $color-blue-median, $color-blue-dark);
+  transition: 0.1s;
+}
+
 .btn-sm-fixed-width {
   width: 6em;
 }
+
