Display total number of available lessons for each filterItem

--- a/src/components/Filter/FilterItem.scss
+++ b/src/components/Filter/FilterItem.scss
@@ -1,4 +1,10 @@
+@import '../../styles/variables';
+
 .label {
   text-overflow: ellipsis;
   overflow-x: hidden;
+}
+
+.numbers {
+  color: $color-gray-light;
 }
