--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -1,19 +1,23 @@
 @import '../../styles/variables';
 
+
 .link {
-  text-decoration: none !important;
   color: black;
   border-bottom: 1px black dotted;
+
+  &, &:hover, &:focus {
+      text-decoration: none;
+    }
 }
 
 .infoBox {
-  padding: 10px 0;
+  padding: 10px;
   max-width: 700px;
-  background-color: #f7f7f7 !important;
+  background-color: #f7f7f7;
   border: 1px solid #b2b2b2;
   border-radius: 10px;
   font-family: $font-family-roboto;
-  font-size: 12pt;
+  font-size: 12em;
   font-weight: 300;
 }
 
