--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -17,7 +17,7 @@
   border: 1px solid #b2b2b2;
   border-radius: 10px;
   font-family: $font-family-roboto;
-  font-size: 12em;
+  font-size: 16px;
   font-weight: 300;
 }
 
