--- a/src/404-template.ejs
+++ b/src/404-template.ejs
@@ -4,18 +4,18 @@ permalink: /404.html
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-  <script>
-    sessionStorage.redirect = location.href;
-  </script>
-  <meta http-equiv="refresh" content="0;URL='/'"></meta>
+    <script>
+      sessionStorage.redirect = location.href;
+    </script>
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0;URL='<%= htmlWebpackPlugin.options.redirectUrl %>'"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-	<!--All this non-sence is used to get the file size above 512 bytes-->
-	<!--This must be done so that it works in IE-->
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <!--All this nonsence is used to get the file size above 512 bytes-->
+    <!--This must be done so that it works in IE-->
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </body>
 </html>
