--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -67,7 +67,7 @@
 
 /* Row containing the text */
 .improvePageBoxTextRow {
-  margin: 5px 20px;
+  margin: 5px 20px 15px 20px;
 }
 
 /* Row containing the links */
@@ -84,11 +84,21 @@
 .improvePageBoxStudent {
   composes: improvePageBox;
   background-color: $color-green-light;
+  box-shadow: inset 0 0 85px #67b762;
+}
+
+.improvePageBoxStudent .improvePageBoxTextRow {
+  box-shadow: 0 8px 6px -6px #67b762;
 }
 
 .improvePageBoxTeacher {
   composes: improvePageBox;
   background-color: $color-blue-light;
+  box-shadow: inset 0 0 85px #5ba4a3;
+}
+
+.improvePageBoxTeacher .improvePageBoxTextRow {
+  box-shadow: 0 8px 6px -6px #5ba4a3;
 }
 
 /* Media screen */
