--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
 
 // Colors
 $color-gray: #656565;
+$color-gray-lighter: #e6e6e6;
 $color-gray-light: #dadada;
 $color-gray-dark: #333;
 $color-green: #46cc46;
@@ -13,6 +14,9 @@ $color-blue: #46cccc;
 $color-blue-light: #a3cccb;
 $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
+
+$color-orange-median: #eb9114;
+$color-orange-dark: #bc7410;
 
 $lkk-green: #0fbe7c;
 $lkk-dark-grey: #3a3a3a;
