--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -1,48 +1,5 @@
 @import '../../styles/variables';
 
-.link {
-  &,
-  &:focus,
-  &:hover {
-    text-decoration: none;
-  }
-  text-align: center;
-  font-size: 1.2em;
-  font-weight: 300;
-  border-radius: 5px;
-  padding: 7px;
-  opacity: 0.85;
-  transition: 0.15s;
-}
-
-/* Css for 'Rapporter et problem' */
-.newIssue {
-  composes: link;
-  background-color: #e6e6ff;
-  color: black;
-}
-
-.newIssue:hover,
-.newIssue:visited {
-  opacity: 1;
-  color: black;
-  box-shadow: inset 0 0 10px #b4c2e4;
-}
-
-/* Css for 'Vis koden og fiks selv' */
-.showCode {
-  composes: link;
-  background-color: #ec971f;
-  color: white;
-}
-
-.showCode:hover,
-.showCode:visited {
-  opacity: 1;
-  color: white;
-  box-shadow: inset 0 0 10px #d38312;
-}
-
 .fontImprovePageBox {
   font-family: $font-family-roboto;
   font-weight: 300;
@@ -102,14 +59,14 @@
 }
 
 /* Media screen */
-@media only screen and (max-width: 450px) {
-  .link {
-    font-size: 0.9em;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  .link {
+@media only screen and (max-width: 300px) {
+  .improvePageBoxTextRow {
     font-size: 0.7em;
+    max-width: 150px;
+  }
+  .improvePageBoxLinkRow {
+    div {
+      font-size: 0.5em;
+    }
   }
 }
