Filter number of available lessons (#204)
* Display number of lessons next to each filter. All numbers are currently 1

* Successfully fetch all android lessons and display everywhere yay

* Get available lessons for all operativsystem tags

* Show number of available items given a filter in the filter menu

* Hide filter tags that have zero available lessons

* Finish up issue #189 and #118

* Dynamically fetch tag groups

* Display total number of available lessons for each filterItem

* Make filter return intersection of all selected tags

* Test new filter intersection behaviour

* Ditch idx in selectors

* Rewrite tagsMatchFilter and remove helper functions

* Remove use of idx and use more natural identificators

* Remove totalAvailableLessons and instead gray out the FilterItems that have no available lessons

* Remove tests that test methods that no longer exist

* Spring cleaning, remove stuff that is no longer used

--- a/src/components/Filter/FilterItem.scss
+++ b/src/components/Filter/FilterItem.scss
@@ -1,4 +1,14 @@
+@import '../../styles/variables';
+
 .label {
   text-overflow: ellipsis;
   overflow-x: hidden;
+}
+
+.noLessons {
+  color: $color-gray-light;
+}
+
+.lessons {
+  color: black;
 }
