--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -16,15 +16,16 @@
     list-style: none;
     padding-top: 10px;
     padding-bottom: 10px;
-
+/*
     display: flex;
+*/
   }
 }
-
+/*
 .checkbox {
   margin-right: 20px;
 }
-
+*/
 .check,
 .activity,
 .save {
