--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -1,29 +1,25 @@
 @import '../../styles/variables';
 
 .link {
-  text-decoration: none !important;
   color: black;
   border-bottom: 1px black dotted;
-}
 
-.fontInfoBox {
-  font-family: $font-family-roboto;
-  font-weight: 300;
-}
-
-.infoBoxContainer {
-  display: flex;
-  justify-content: center;
+  &,
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 .infoBox {
-  composes: fontInfoBox;
-  padding: 5px;
-  margin: 0 16px;
+  padding: 10px;
   max-width: 700px;
-  background-color: #f7f7f7 !important;
+  background-color: #f7f7f7;
   border: 1px solid #b2b2b2;
   border-radius: 10px;
+  font-family: $font-family-roboto;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .infoBoxRow {
@@ -35,5 +31,9 @@
   }
   div {
     padding: 5px;
+  }
+
+  .center {
+    text-align: center;
   }
 }
