More changes to buttons (Fjern filter btn, Improvepage btns, vis/skjul filter btn)

--- a/src/components/Filter/LessonFilter.scss
+++ b/src/components/Filter/LessonFilter.scss
@@ -15,3 +15,10 @@
  	margin-right: -14px;
  	transition: 0.1s;
 }
+
+.bgColorStudent {
+	background-color: rgba(238, 247, 238, 0.9);
+}
+.bgColorTeacher {
+	background-color: rgba(239, 246, 246, 0.9);
+}
