--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -41,21 +41,21 @@
 .improvePageBoxStudent {
   composes: improvePageBox;
   background-color: $color-green-light;
-  box-shadow: inset 0 0 85px #67b762;
+  box-shadow: inset 0 0 85px #89c785;
 }
 
 .improvePageBoxStudent .improvePageBoxTextRow {
-  box-shadow: 0 8px 6px -6px #67b762;
+  box-shadow: 0 8px 6px -6px #89c785;
 }
 
 .improvePageBoxTeacher {
   composes: improvePageBox;
   background-color: $color-blue-light;
-  box-shadow: inset 0 0 85px #5ba4a3;
+  box-shadow: inset 0 0 85px #7bb7b6;
 }
 
 .improvePageBoxTeacher .improvePageBoxTextRow {
-  box-shadow: 0 8px 6px -6px #5ba4a3;
+  box-shadow: 0 8px 6px -6px #7bb7b6;
 }
 
 /* Media screen */
