--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -77,13 +77,34 @@
   @include button-nav(#fff, $color-blue, $color-blue-median, 25%);
 }
 
-.btn-show-code {
-  @include button-variant(#fff, $color-orange-median, $color-orange-dark);
+.btn-white-grey {
+  @include button-variant(#000, $color-gray-lighter, $color-gray-light);
+  transition: 0.1s;
+  &,
+  &:hover,
+  &:active:focus,
+  &:focus {
+    outline: none;
+  }
 }
 
-.btn-new-issue {
-  @include button-variant(#000, $color-gray-lighter, $color-gray-light);
+.btn-white-grey-lighter {
+  @include button-variant(#000, $color-white-snow, $color-gray-lighter);
+  transition: 0.1s;
+  border-color: $color-gray-light;
+  &:hover,
+  &:active:focus,
+  &:focus {
+    outline: none;
+  }
 }
+
+.btn-orange {
+  @include button-variant(#fff, $color-orange-median, $color-orange-dark);
+  transition: 0.1s;
+}
+
+
 
 .btn-sm-fixed-width {
   width: 6em;
