--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,8 +2,9 @@
 @import "~bootstrapStyles/variables";
 
 // Colors
+$color-white-snow: #fafafa;
 $color-gray: #656565;
-$color-gray-lighter: #e6e6e6;
+$color-gray-lighter: #f2f2f2;
 $color-gray-light: #dadada;
 $color-gray-dark: #333;
 $color-green: #46cc46;
@@ -15,7 +16,7 @@ $color-blue-light: #a3cccb;
 $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
 $color-orange-median: #eb9114;
-$color-orange-dark: #bc7410;
+$color-orange-dark: #ff9500;
 
 $lkk-green: #0fbe7c;
 $lkk-dark-grey: #3a3a3a;
