Changes to pass stylelint

--- a/src/components/Lesson/ImprovePage.scss
+++ b/src/components/Lesson/ImprovePage.scss
@@ -24,7 +24,7 @@
 
 /* Row containing the text */
 .improvePageBoxTextRow {
-  margin: 5px 20px 15px 20px;
+  margin: 5px 20px 15px;
 }
 
 /* Row containing the links */
