--- a/src/components/Navigation/Footer.scss
+++ b/src/components/Navigation/Footer.scss
@@ -63,5 +63,5 @@
 .svg:hover,
 .img:hover {
   transform: scale(1.1);
-  box-shadow: 10px 10px 20px 10px rgba(0,0,0,0.5);
+  box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, 0.5);
 }
