--- a/src/404-template.ejs
+++ b/src/404-template.ejs
@@ -5,7 +5,7 @@ permalink: /404.html
 <html>
 <head>
     <script>
-      sessionStorage.redirect = location.href;
+      sessionStorage.redirect = location.pathname;
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0;URL='<%= htmlWebpackPlugin.options.redirectUrl %>'"/>
