--- a/src/components/FrontPage/TeacherInfobox.scss
+++ b/src/components/FrontPage/TeacherInfobox.scss
@@ -14,7 +14,7 @@
 .infoBox {
   padding: 10px;
   max-width: 700px;
-  background-color: #f7f7f7;
+  background-color: rgba(239, 246, 246, 0.9);
   border: 1px solid #b2b2b2;
   border-radius: 10px;
   font-family: $font-family-roboto;
