--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -6,6 +6,10 @@
 //////////////////////////////////////////////
 @import '../../../node_modules/highlight.js/styles/idea';
 
+@import '../../styles/variables';
+@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables';
+
 @mixin styledList {
   ul,
   ol {
@@ -184,6 +188,13 @@ code {
   &.blockmoreblocks {
     color: #fff;
   }
+}
+
+//// tables
+table {
+  // add table class to all tables, assumes that tables are only used
+  // for listing stuff and is not in use for other components like calendars
+  @extend .table;
 }
 
 // horisontal scroll on screens, do not wrap
