--- a/src/styles/pre-customizations.scss
+++ b/src/styles/pre-customizations.scss
@@ -2,25 +2,25 @@
 // the derived bootstrap variables.
 
 // general colors
-$light-background: #B1DAAE;
+$light-background: #b1daae;
 
 // level colors
-$color-level1: fade(#7DC87D, 100%);
-$color-level2: fade(#1E1EFF, 90%);
-$color-level3: fade(#FF1E1E, 90%);
-$color-level4: fade(#000000, 80%);
+$color-level1: fade(#7dc87d, 100%);
+$color-level2: fade(#1e1eff, 90%);
+$color-level3: fade(#ff1e1e, 90%);
+$color-level4: fade(#000, 80%);
 
 //	Scratch block colors
-$color-scratchblock-motion:     #505FD7;
-$color-scratchblock-looks:      #9B33D9;
-$color-scratchblock-sound:      #D000C2;
-$color-scratchblock-pen:        #00A16F;
-$color-scratchblock-data:       #FF7500;
-$color-scratchblock-events:     #D38117;
-$color-scratchblock-control:    #E9AA00;
-$color-scratchblock-sensing:    #00A3E6;
-$color-scratchblock-operators:  #00C114;
-$color-scratchblock-moreblocks: #71009A;
+$color-scratchblock-motion:     #505fd7;
+$color-scratchblock-looks:      #9b33d9;
+$color-scratchblock-sound:      #d000c2;
+$color-scratchblock-pen:        #00a16f;
+$color-scratchblock-data:       #ff7500;
+$color-scratchblock-events:     #d38117;
+$color-scratchblock-control:    #e9aa00;
+$color-scratchblock-sensing:    #00a3e6;
+$color-scratchblock-operators:  #00c114;
+$color-scratchblock-moreblocks: #71009a;
 
 // table colors
 $table-border-color: #000;
