--- a/src/components/PlaylistPage/CourseInfo.scss
+++ b/src/components/PlaylistPage/CourseInfo.scss
@@ -3,7 +3,6 @@
 .container {
   border-radius: 10px;
   max-width: 700px;
-  margin-top: 63px;
   padding: 20px;
 }
 
@@ -18,4 +17,18 @@
 	composes: container;
   background-color: $color-blue-lighter;
   border: 1px solid $color-blue-light;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    margin-top: 62px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .container {
+    margin-top: 5px;
+    margin-bottom: 25px;
+    
+  }
 }
