--- a/src/pages/PlaylistPage.scss
+++ b/src/pages/PlaylistPage.scss
@@ -11,6 +11,7 @@
 }
 
 .courseInfoBtn {
+  margin-left: auto;
   &,
   &:hover,
   &:active:focus,
@@ -27,6 +28,7 @@
 @media only screen and (max-width: 1156px) {
   .courseInfoBtn {
     margin-top: 10px;
+    margin-left: 0;
   }
 }
 
