--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,12 +11,14 @@ $color-gray-dark: #333;
 $color-green: #46cc46;
 $color-green-lighter: #eef7ee;
 $color-green-light: #b1daae;
+$color-green-median-light: #89c785;
 $color-green-median: #359e37;
 $color-green-dark: #265732;
 
 $color-blue: #46cccc;
 $color-blue-lighter: #eff6f6;
 $color-blue-light: #a3cccb;
+$color-blue-median-light: #7bb7b6;
 $color-blue-median: #3a9b94;
 $color-blue-dark: #215651;
 
