--- a/pdf/pdf.css
+++ b/pdf/pdf.css
@@ -178,13 +178,17 @@ li::before {
   font-weight: 300;
 }*/
 
-h2.check {
+.check {
   background-image: url(../src/assets/graphics/check.svg);
   background-size: 40px 40px;
   background-repeat: no-repeat;
   padding-top: 4px;
-  padding-bottom: 9px;
+  padding-bottom: 40px;
   padding-left: 50px;
+}
+
+h2.check {
+  padding-bottom: 9px;
 }
 
 .try {
