Adds section tags for tips and challenge

--- a/pdf/pdf.css
+++ b/pdf/pdf.css
@@ -196,7 +196,7 @@ h2.check {
   border-radius: 10px;
   padding: 1px 20px 10px;
 }
-code.try {
+code {
   background-color: #fff;
   color: #007cc9;
 }
