--- a/pdf/pdf.css
+++ b/pdf/pdf.css
@@ -5,49 +5,55 @@
 }*/
 
 .level {
-  margin-right: 0.3em;
-  width: 0.75em;
-  height: 0.75em;
-  vertical-align: baseline;
+    margin-right: 0.3em;
+    width: 0.75em;
+    height: 0.75em;
+    vertical-align: baseline;
 }
 
 .icon-1 {
-  background-image: url('../src/assets/graphics/level-1.svg');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  padding-left: 30px;
-  display: block;
+    background-image: url('../src/assets/graphics/level-1.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 30px;
+    display: block;
 }
 
 .icon-2 {
-  background-image: url('../src/assets/graphics/level-2.svg');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  padding-left: 30px;
-  display: block;
+    background-image: url('../src/assets/graphics/level-2.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 30px;
+    display: block;
 }
 
 .icon-3 {
-  background-image: url('../src/assets/graphics/level-3.svg');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  padding-left: 30px;
-  display: block;
+    background-image: url('../src/assets/graphics/level-3.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 30px;
+    display: block;
 }
 
 .icon-4 {
-  background-image: url('../src/assets/graphics/level-4.svg');
-  background-repeat: no-repeat;
-  background-size: 20px;
-  padding-left: 30px;
-  display: block;
+    background-image: url('../src/assets/graphics/level-4.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 30px;
+    display: block;
 }
 
-i, cite, em, var, address, dfn {
+i,
+cite,
+em,
+var,
+address,
+dfn {
     font-style: italic;
 }
 
-b, strong {
+b,
+strong {
     font-weight: bold;
 }
 
@@ -56,16 +62,33 @@ a {
     text-decoration: none;
 }
 
-h1, .h1 {
+h1,
+.h1 {
     font-size: 41px;
 }
 
-h1, .h1, h2, .h2, h3, .h3 {
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
     margin-top: 22px;
     margin-bottom: 11px;
 }
 
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
     font-family: inherit;
     font-weight: 500;
     line-height: -10.9;
@@ -78,25 +101,45 @@ h1 {
 }
 
 span.hljs-comment {
-  color: #808080;
-  font-style: italic;
+    color: #808080;
+    font-style: italic;
 }
 
-span.hljs-string, span.hljs-value {
-  color: #008000;
-  font-weight: bold;
+span.hljs-string,
+span.hljs-value {
+    color: #008000;
+    font-weight: bold;
 }
 
-span.hljs-number, span.hljs-attribute {
-  color: #0000ff;
-  font-weight: normal;
+span.hljs-number,
+span.hljs-attribute {
+    color: #0000ff;
+    font-weight: normal;
 }
 
-span.hljs-tag, span.hljs-pi {
+span.hljs-tag,
+span.hljs-pi {
     background: #efefef;
 }
 
-span.hljs-tag, span.hljs-title, span.hljs-id, span.hljs-attr_selector, .span.hljs-pseudo, span.hljs-literal, span.hljs-keyword, span.hljs-hexcolor, span.css, span.hljs-function, span.ini, span.hljs-class, span.hljs-list, span.nginx, span.tex, span.hljs-command, span.hljs-request, span.hljs-status {
+span.hljs-tag,
+span.hljs-title,
+span.hljs-id,
+span.hljs-attr_selector,
+.span.hljs-pseudo,
+span.hljs-literal,
+span.hljs-keyword,
+span.hljs-hexcolor,
+span.css,
+span.hljs-function,
+span.ini,
+span.hljs-class,
+span.hljs-list,
+span.nginx,
+span.tex,
+span.hljs-command,
+span.hljs-request,
+span.hljs-status {
     font-weight: bold;
     color: #000080;
 }
@@ -105,8 +148,9 @@ span.hljs-number {
     font-weight: normal;
 }
 
-span.hljs-doctype, span.hljs-http {
-  color: #808000;
+span.hljs-doctype,
+span.hljs-http {
+    color: #808000;
 }
 
 span.hljs-title {
@@ -114,23 +158,38 @@ span.hljs-title {
     color: #000;
 }
 
-span.hljs-variable, span.hljs-envvar, span.apache, span.hljs-sqbracket, span.nginx, span.hljs-built_in, span.hljs-name {
+span.hljs-variable,
+span.hljs-envvar,
+span.apache,
+span.hljs-sqbracket,
+span.nginx,
+span.hljs-built_in,
+span.hljs-name {
     color: #660e7a;
 }
 
-section.check ul, section.check ol, section.activity ul, section.activity ol, section.save ul, section.save ol {
+section.check ul,
+section.check ol,
+section.activity ul,
+section.activity ol,
+section.save ul,
+section.save ol {
     padding: 0;
     margin: 0 0 20px;
 }
 
-section.check li, section.activity li, section.save li {
+section.check li,
+section.activity li,
+section.save li {
     list-style: none;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-left: 45px;
 }
 
-.check li::before, .activity li::before, .save li::before {
+.check li::before,
+.activity li::before,
+.save li::before {
     content: " ";
     border-radius: 8px;
     border: 3px solid #abdbea;
@@ -140,26 +199,26 @@ section.check li, section.activity li, section.save li {
 }
 
 img {
-  vertical-align: middle;
-  border: 0;
+    vertical-align: middle;
+    border: 0;
 }
 
 pre {
-  display: block;
-  padding: 10.5px;
-  margin: 0 0 11px;
-  font-size: 15px;
-  line-height: 1.42857;
-  word-break: break-all;
-  word-wrap: break-word;
-  color: #333333;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+    display: block;
+    padding: 10.5px;
+    margin: 0 0 11px;
+    font-size: 15px;
+    line-height: 1.42857;
+    word-break: break-all;
+    word-wrap: break-word;
+    color: #333333;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 figure {
-  margin: 0;
+    margin: 0;
 }
 
 figure > img {
@@ -170,8 +229,19 @@ figure > img {
     padding: 20px;
 }
 
-article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary {
-  display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+    display: block;
 }
 
 pre code {
@@ -184,9 +254,9 @@ pre code {
 }
 
 pre > code {
-  background-color: transparent;
-  word-wrap: normal;
-  white-space: pre;
+    background-color: transparent;
+    word-wrap: normal;
+    white-space: pre;
 }
 
 pre code {
@@ -209,74 +279,74 @@ section.try code {
     color: #007cc9;
 }
 
-code, kbd, pre, samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+code,
+kbd,
+pre,
+samp {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 pre.blocks,
 code.b {
-  background-color: inherit;
-  border: 0;
+    background-color: inherit;
+    border: 0;
 }
 
 ul {
-  margin-left: -20px;
+    margin-left: -20px;
 }
 
 .blocks {
-  background-color: inherit;
-  border: 0;
+    background-color: inherit;
+    border: 0;
 }
 
 .b {
-  background-color: inherit;
-  border: 0;
+    background-color: inherit;
+    border: 0;
 }
 
 .breadcrumb {
-  padding-left: 10px;
-  float: left;
-  font-size: 30px;
+    padding-left: 10px;
+    float: left;
+    font-size: 30px;
 }
 
 .homeIcon {
-  line-height: 43px;
-  font-size: 0.8em;
+    line-height: 43px;
+    font-size: 0.8em;
 }
 
 .courseIcon {
-  height: 50px;
-  padding: 10px 0 15px;
+    height: 50px;
+    padding: 10px 0 15px;
 }
 
 .lessonLink {
-  font-size: 20px;
-  vertical-align: middle;
+    font-size: 20px;
+    vertical-align: middle;
 }
 
 body {
-  padding-left: 15px;
-  padding-right: 15px;
-  line-height: 1.42857;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333333;
-  background-color: #fff;
+    padding-left: 15px;
+    padding-right: 15px;
+    line-height: 1.42857;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #333333;
+    background-color: #fff;
 }
 
-.intro {
-  
-}
+.intro {}
 
 .title {
-  font-size: 45px;
-  font-weight: bold;
-  margin-bottom: -10px;
-
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: -10px;
 }
 
 .author {
-  margin-bottom: 50px;
-  font-style: italic;
+    margin-bottom: 50px;
+    font-style: italic;
 }
 
 .activity {
@@ -286,20 +356,50 @@ body {
     border-radius: 5px;
 }
 
-span[class^="hljs-"], span[class*=" hljs-"] {
-  background-color: transparent;
+span[class^="hljs-"],
+span[class*=" hljs-"] {
+    background-color: transparent;
 }
 
-.blockmotion { background-color: #505fd7; }
-.blocklooks { background-color: #9b33d9; }
-.blocksound { background-color: #d000c2; }
-.blockpen { background-color: #00a16f; }
-.blockdata { background-color: #ff7500; }
-.blockevents { background-color: #d38117; }
-.blockcontrol { background-color: #e9aa00; }
-.blocksensing { background-color: #00a3e6; }
-.blockoperators { background-color: #00c114; }
-.blockmoreblocks { background-color: #71009a; }
+.blockmotion {
+    background-color: #505fd7;
+}
+
+.blocklooks {
+    background-color: #9b33d9;
+}
+
+.blocksound {
+    background-color: #d000c2;
+}
+
+.blockpen {
+    background-color: #00a16f;
+}
+
+.blockdata {
+    background-color: #ff7500;
+}
+
+.blockevents {
+    background-color: #d38117;
+}
+
+.blockcontrol {
+    background-color: #e9aa00;
+}
+
+.blocksensing {
+    background-color: #00a3e6;
+}
+
+.blockoperators {
+    background-color: #00c114;
+}
+
+.blockmoreblocks {
+    background-color: #71009a;
+}
 
 .blockmotion,
 .blocklooks,
@@ -310,30 +410,33 @@ span[class^="hljs-"], span[class*=" hljs-"] {
 .blockcontrol,
 .blocksensing,
 .blockoperators,
-.blockmoreblocks {color: #fff;}
+.blockmoreblocks {
+    color: #fff;
+}
 
 ul,
 ol {
-  padding: 0;
-  margin: 0 0 20px;
+    padding: 0;
+    margin: 0 0 20px;
 }
 
 li {
-  list-style: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-left: 45px;
+    list-style: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 45px;
 }
 
 li::before {
-  content: " ";
-  border-radius: 8px;
-  border: 3px solid #abdbea;
-  padding: 10px;
-  margin-top: 10px;
-  float: left;
-  margin-left: -40px;
+    content: " ";
+    border-radius: 8px;
+    border: 3px solid #abdbea;
+    padding: 10px;
+    margin-top: 10px;
+    float: left;
+    margin-left: -40px;
 }
+
 
 /*.activity h1 {
   @include headingStyle;
@@ -345,23 +448,24 @@ li::before {
 }*/
 
 .check {
-  background-image: url(../src/assets/graphics/check.svg);
-  background-size: 40px 40px;
-  background-repeat: no-repeat;
-  padding-top: 4px;
-  padding-bottom: 40px;
-  padding-left: 50px;
+    background-image: url(../src/assets/graphics/check.svg);
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    padding-top: 4px;
+    padding-bottom: 40px;
+    padding-left: 50px;
 }
 
 h2.check {
-  padding-bottom: 9px;
+    padding-bottom: 9px;
 }
 
 .try {
-  background: #abdbea;
-  border-radius: 10px;
-  padding: 1px 20px 10px;
+    background: #abdbea;
+    border-radius: 10px;
+    padding: 1px 20px 10px;
 }
+
 code {
     padding: 2px 4px;
     font-size: 90%;
@@ -369,69 +473,73 @@ code {
     border-radius: 4px;
     color: #c7254e;
 }
+
 li.try::before {
-  border: 3px solid #fff;
+    border: 3px solid #fff;
 }
 
 .protip,
 .tip {
-  border: 3px solid #ff7f00;
-  background: #fff99d;
-  border-radius: 12px;
-  padding: 0 20px 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+    border: 3px solid #ff7f00;
+    background: #fff99d;
+    border-radius: 12px;
+    padding: 0 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .flag {
-  border-top: 3px dotted rgb(230, 134, 45);
-  padding-bottom: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+    border-top: 3px dotted rgb(230, 134, 45);
+    padding-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 h2.flag {
-  color: rgb(54, 161, 55);
-  background-image: url(../src/assets/graphics/flag.svg);
-  background-position: 0 10px;
-  background-size: 40px 40px;
-  background-repeat: no-repeat;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  padding-left: 60px;
+    color: rgb(54, 161, 55);
+    background-image: url(../src/assets/graphics/flag.svg);
+    background-position: 0 10px;
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 60px;
 }
 
 h2.save {
-  color: rgb(36, 90, 154);
-  background-image: url(../src/assets/graphics/save.svg);
-  background-position: 0 10px;
-  background-size: 40px 40px;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 50px;
+    color: rgb(36, 90, 154);
+    background-image: url(../src/assets/graphics/save.svg);
+    background-position: 0 10px;
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 50px;
 }
+
 .save {
-  border-top: 3px solid rgb(36, 90, 154);
-  margin: 20px 0;
+    border-top: 3px solid rgb(36, 90, 154);
+    margin: 20px 0;
 }
 
 .challenge {
-  border: 3px solid #00b1da;
-  border-radius: 12px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+    border: 3px solid #00b1da;
+    border-radius: 12px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 .challenge h2 {
-  color: #fff;
-  background: #00b1da;
-  padding-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 0;
+    color: #fff;
+    background: #00b1da;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 0;
 }
