--- a/pdf/pdf.css
+++ b/pdf/pdf.css
@@ -529,8 +529,6 @@ h2.save {
     border: 3px solid #00b1da;
     border-radius: 12px;
     padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -538,8 +536,13 @@ h2.save {
 .challenge h2 {
     color: #fff;
     background: #00b1da;
-    padding-left: 20px;
     padding-top: 10px;
+    padding-left: 15px;
     padding-bottom: 10px;
     margin-top: 0;
+}
+
+.challenge p {
+    padding-left: 15px;
+    padding-right: 15px;
 }
