--- a/src/components/Lesson/Content.scss
+++ b/src/components/Lesson/Content.scss
@@ -9,6 +9,8 @@
 @import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins';
 @import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables';
 
+$checkbox-blue: #abdbea;
+
 @mixin styledList {
   ul,
   ol {
@@ -16,7 +18,7 @@
     margin: 0 0 20px;
   }
   ul.task-list li.task-list-item::before {
-    display: none !important;
+    display: none;
   }
   li {
     list-style: none;
@@ -27,11 +29,11 @@
   li::before {
     content: " ";
     border-radius: 20px;
-    border: 3px solid #abdbea;
-    padding: 5px;
+    border: 3px solid $checkbox-blue;
+    padding: 8px;
     float: left;
-    margin-left: -30px;
-    margin-top: 7px;
+    margin-left: -40px;
+    margin-top: 6px;
   }
   label {
     font-weight: normal;
@@ -229,9 +231,7 @@ table {
 }
 
 input[type="checkbox"] {
-  display: block;
-  opacity: 0;
-  filter: alpha(opacity=0);
+  display: none;
 }
 
 input[type="checkbox"] + label {
@@ -241,20 +241,20 @@ input[type="checkbox"] + label {
 }
 
 input[type="checkbox"] + label::before {
-  content: '';
+  content: '\a0'; // non-breaking space
   display: inline-block;
   visibility: visible;
-  left: 0;
-  width: 1em;
-  height: 1em;
-  margin: 0 0.8em -0.1em -2.2em;
-  line-height: 0.8;
+  width: 1.3em;
+  height: 1.3em;
+  margin: 0 0.6em 0 -2.2em;
+  line-height: 1.1em;
   text-align: center;
-  border: 3px solid #abdbea;
+  border: 3px solid $checkbox-blue;
+  border-radius: 3px;
 }
 
 input[type="checkbox"]:checked + label::before {
-  content: '✔';
-  line-height: 0.8em;
-  text-align: center;
+  content: '\2714'; // checkmark
+  line-height: 1.1em;
+  padding-left: 0.1em;
 }
